[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/match/hand/my_hand_area.gd" type="Script" id=1]
[ext_resource path="res://scenes/match/base_player_field.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/match/my_field.gd" type="Script" id=3]

[node name="PlayerField" instance=ExtResource( 2 )]
script = ExtResource( 3 )

[node name="MyHandArea" type="ReferenceRect" parent="." index="9"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 220.0
margin_top = 452.0
margin_right = 1020.0
margin_bottom = 692.0
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="MyHandArea" index="0"]

[connection signal="card_clicked" from="MyHandArea" to="." method="_on_MyHandArea_card_clicked"]
[connection signal="card_decided" from="MyHandArea" to="." method="_on_MyHandArea_card_decided"]
[connection signal="card_held" from="MyHandArea" to="." method="_on_MyHandArea_card_held"]
[connection signal="card_order_changed" from="MyHandArea" to="." method="_on_MyHandArea_card_order_changed"]
